@@ -538,13 +538,13 @@ function browseHandleListResponse(view, item, command, resp, prevPage, appendIte
                 });
             }
             // Artist from online service, but no albums? Add links to services...
-            if (listingArtistAlbums && view.items.length==0) {
+            if (listingArtistAlbums && view.items.length==0 && view.onlineServices.length>0) {
                 view.items.push({id:"intro", title:i18n("No albums have been favorited for this artist. Please use the entries below to look for albums on your online services."), type:"text"});
                 canAddAlbumSort = false;
-                for (var i=0, loop=view.currentActions, len=loop.length; i<len; ++i) {
-                    if (loop[i].isService) {
-                        view.items.push({id:loop[i].id ? loop[i].id : "ca"+i, title:loop[i].title, do:loop[i].do, svg:loop[i].svg, icon:loop[i].icon, currentAction:true, artist_id:artist_id});
-                    }
+                for (var i=0, loop=view.onlineServices, len=loop.length; i<len; ++i) {
+                    var emblem = getEmblem(loop[i].toLowerCase()+':');
+                    view.items.push({title:/*!i81n*/'wimp'==loop[i] ? 'Tidal' : capitalize(loop[i]),
+                                     svg:emblem ? emblem.name : undefined, id:loop[i], artist_id:artist_id, currentAction:true});
                 }
             }
         } else if (undefined!=resp.actionItems && resp.actionItems.length>0) {
@@ -754,8 +754,7 @@ function browseHandleListResponse(view, item, command, resp, prevPage, appendIte
                 for (var i=0, loop=view.onlineServices, len=loop.length; i<len; ++i) {
                     var emblem = getEmblem(loop[i].toLowerCase()+':');
                     actions.push({title:/*!i81n*/'wimp'==loop[i] ? 'Tidal' : capitalize(loop[i]),
-                                svg:emblem ? emblem.name : undefined, id:loop[i], isService:true,
-                                artist_id:artist_id});
+                                  svg:emblem ? emblem.name : undefined, id:loop[i], artist_id:artist_id});
                 }
                 if (LMS_P_YT) {
                     actions.push({title:/*NoTrans*/'YouTube', svg:'youtube',
